# annotator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  annotator-config.cmake
source/: CMakeLists.txt
source/annotator/: CMakeLists.txt
source/annotator/resource/: annotator.qrc  annotator.qss  icons.qrc
source/annotator/source/: annotator.h.in  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui  player.cpp  player.h  player.ui  videoplayer.cpp  videoplayer.h
source/annotator/source/GUI/: ownslider.cpp  ownslider.h
source/annotator/source/annotation/: annotationitem.cpp  annotationitem.h  annotationitem.ui  annotationswidget.cpp  annotationswidget.h  annotationswidget.ui  annotationwindow.cpp  annotationwindow.h  annotationwindow.ui
source/annotator/source/attribute/: attributeitem.cpp  attributeitem.h  attributeitem.ui  attributeswidget.cpp  attributeswidget.h  attributeswidget.ui  newattributedialog.cpp  newattributedialog.h  newattributedialog.ui
source/annotator/source/controller/: commandcontroller.cpp  commandcontroller.h  selectioncontroller.cpp  selectioncontroller.h
source/annotator/source/geomObject/: annotationgraphicsitem.cpp  annotationgraphicsitem.h  annotationgraphicsitemfactory.cpp  annotationgraphicsitemfactory.h  corner.cpp  corner.h  ellipseannotation.cpp  ellipseannotation.h  ownqgaphicsItem.cpp  ownqgaphicsItem.h  rectangleannotation.cpp  rectangleannotation.h
source/annotator/source/graphic/: owngraphicscene.cpp  owngraphicscene.h  owngraphicview.cpp  owngraphicview.h
source/annotator/source/gui/: alert.cpp  alert.h  classesdialog.cpp  classesdialog.h  classesdialog.ui  editobjectdialog.cpp  editobjectdialog.h  editobjectdialog.ui  exportannotations.cpp  exportannotations.h  exportannotations.ui  (+23 more)
source/annotatorplugin/: CMakeLists.txt
source/annotatorplugins/: CMakeLists.txt  README.md
source/annotatorplugins/camshift/: CMakeLists.txt  camshift.cpp  camshift.h  widget.cpp
source/annotatorplugins/correlationtracker/: CMakeLists.txt  correlationtracker.cpp  correlationtracker.h  correlationtracker.json  widget.ui
source/annotatorplugins/haarcascade/: CMakeLists.txt  haarcascade.cpp  haarcascade.h  haarcascade.json  resource.qrc  widget.cpp  widget.h  widget.ui
source/annotatorplugins/kalmanfilter/: CMakeLists.txt  kalmanfilter.cpp  kalmanfilter.h  widget.cpp  widget.h  widget.ui
source/annotatorplugins/templatematcher/: CMakeLists.txt  templatematcher.cpp  templatematcher.h  templatematcher.json  widget.cpp  widget.ui
source/tests/: CMakeLists.txt
(+55 files in other folders)
